@@ -26,7 +26,6 @@ unix-seqpacket = ["tokio-seqpacket"]
 unix-stream = ["tokio/net"]
 
 [dependencies]
-byteorder = "1.4.3"
 filedesc = { version = "0.6.1" }
 tokio = { version = "1.32.0", features = ["rt", "sync"] }
 tokio-seqpacket = { version = "0.7.0", optional = true }
